<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White_Blue"
    tools:context=".AboutComputer">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="What is a Computer?"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:text="@string/What_is_Computer"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:text="@string/What_is_Computer1"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="289dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/computer" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_25sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingRight="@dimen/_5sdp"
                android:text="@string/What_is_Computer2"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15sdp"
                android:paddingLeft="@dimen/_25sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingRight="@dimen/_5sdp"
                android:text="@string/What_is_Computer3"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>